--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,12 @@ email-validator==2.2.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.1
 
-pytest==9.0.1
+pytest==8.3.3 
 pytest-cov==5.0.0
 httpx==0.27.2
 
+# NEW for JWT + Playwright
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.9
+pytest-playwright==0.5.0
+playwright==1.49.0
