--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # ⭐ NEW: install Playwright browsers in CI
       - name: Install Playwright browsers
         run: |
           python -m playwright install --with-deps
 
-      - name: Run tests
+      # ⭐ NEW: start FastAPI app in background so E2E tests can hit localhost:8000
+      - name: Start FastAPI server
+        run: |
+          uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          sleep 5
+
+      - name: Run tests (unit, integration, E2E)
         run: pytest
+
